# PDU_Data_Automation_App

./: .gitignore  AGENTS.md  LICENSE  README.md  eslint.config.js  package.json
backend/: Cargo.toml  README.md  tauri.conf.json
backend/capabilities/: default.json
backend/src/: commands.rs  lib.rs  main.rs
backend/src/automation/: csv_data.rs  mapped.rs  mod.rs  processors.rs  reports.rs  tasks.rs  unit_candidates.rs  unit_state.rs
backend/src/config/: accuracy.rs  mod.rs  profile.rs  resource_paths.rs
backend/src/notifications/: app_settings.rs  config.rs  floor_settings.rs  message.rs  mod.rs  shift_log.rs  stations.rs  summary.rs  teams.rs  worker.rs
backend/tests/: csv_parsing.rs  report_discovery.rs  report_writes.rs  unit_folder_detection.rs
docs/: ARCHITECTURE.md  CODE_REVIEW.md  CONFIGURATION_MODEL.md  LEGACY_BEHAVIOR.md  MIGRATION_PLAN.md  NOTIFICATIONS.md  OPERATOR_NOTIFICATION_CATALOG.md  OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  RELEASE_AND_DEPLOYMENT.md  STRUCTURE_CLEANUP_DONE.md  STRUCTURE_CLEANUP_PLAN.md  STRUCTURE_CLEANUP_REMAINING.md
fixtures/: README.md
frontend/: README.md  index.html  tsconfig.app.json  tsconfig.node.json  tsconfig.tests.json
old-docs/: ARCHITECTURE.md  MIGRATION_PLAN.md  PDU_Data_Automation_Backend_Audit_and_Fix_Roadmap.md  PROJECT_STRUCTURE.md  README.md  RELEASE_AND_DEPLOYMENT.md
release/: README.md  v0.2.0.md  v0.2.1.md  v0.2.10.md  v0.2.11.md  v0.2.12.md  v0.2.13.md  v0.2.14.md  v0.2.15.md  v0.2.16.md  v0.2.17.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.2.9.md
scripts/: README.md  run-bun.mjs  run-desktop-demo.mjs  validate-local.mjs
shared/: README.md
(+69 files in other folders)
