[package]
name = "pdu-data-automation-app"
version = "0.1.0"
description = "PDU data automation desktop app"
authors = ["Syed Hassaan Shah"]
edition = "2021"

[lib]
name = "pdu_data_automation_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
