[package]
name = "pdu-data-automation-app"
version = "0.2.12"
description = "PDU data automation desktop app"
authors = ["Syed Hassaan Shah"]
edition = "2021"

[lib]
name = "pdu_data_automation_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
csv = "1"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2.10.1"
thiserror = "2"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tauri-cli = { version = "2", features = [] }
roxmltree = "0.20"
tempfile = "3"
